# 3Drender

./: CMakeLists.txt  README.md  bezier_curve3.cpp  bezier_curve3.h  bmp.cpp  bmp.h  camera.cpp  camera.h  collision.cpp  collision.h  color.h  config.cpp  config.h  config.txt  const.h  cornell_box.txt  cylinder.cpp  cylinder.h  engine.cpp  engine.h  hitpointmap.cpp  hitpointmap.h  light.cpp  light.h  main.cpp  material.cpp  material.h  material.txt  object.cpp  object.h  photon.h  photontracer.cpp  photontracer.h  plane.cpp  plane.h  pointlight.cpp  pointlight.h  polynomial6.cpp  polynomial6.h  ppm.cpp  (+18 more)
